# python-javaobj

./: .coveragerc  .editorconfig  .gitignore  .travis.yml  AUTHORS  README.md  README.rst  eip_tests.py  javaobj.py  manifest.in  modifiedutf8.py  obj3.ser  obj5.ser  obj7.ser  objSuper.ser  peiping.py  peiping_http.py  pyproject.toml  requirements.txt  setup.py  tests.py  tox.ini
.github/workflows/: build-18.04.yml  build-20.04.yml  build-24.04.yml  build.yml
java/: .classpath  .gitignore  .project  pom.xml
java/src/: OneTest.java
java/src/test/java/: CollectionsTest.java  JFrameTest.java  OneTest.java
javaobj/: __init__.py  api.py  constants.py  core.py  javaobj.py  main.py  modifiedutf8.py  transformers.py  utils.py
javaobj/deserialize/: __init__.py  beans.py  constants.py  core.py  stream.py
javaobj/v1/: __init__.py  beans.py  core.py  marshaller.py  transformers.py  unmarshaller.py
javaobj/v2/: __init__.py  api.py  beans.py  core.py  main.py  stream.py  transformers.py
javaobj/v3/: __init__.py  _compat.py  beans.py  exceptions.py  parser.py  reader.py  transformers.py  writer.py
tests/: __init__.py  issue60_custom_reader_endblock.ser  jceks_issue_5.ser  obj0.ser  obj1.ser  obj2.ser  obj4.ser  objArrays.ser  objCollections.ser  objEnums.ser  objException.ser  objSuper.ser  sunExample.ser  test2DArray.ser  testBoolIntLong-2.ser  testBoolIntLong.ser  testCharArray.ser  testChars.ser  testClass.ser  testClassArray.ser  testClassWithByteArray.ser  testCustomWriteObject.ser  testHashSet.ser  testJapan.ser  testLinkedHashSet.ser  testSwingObject.ser  testTime.ser  testTreeSet.ser  test_readFields.ser  test_v1.py  test_v2.py  test_v3.py  tests.py  tests_v2.py
tests/java/: .gitignore  pom.xml
tests/java/src/test/java/: JFrameTest.java  (+3 more)
