[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["javaobj"]

[project]
name = "javaobj-py3"
version = "0.4.4"
description = "Module for serializing and de-serializing Java objects."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Volodymyr Buell", email = "vbuell@gmail.com" }
]
maintainers = [
    { name = "Thomas Calmant", email = "thomas.calmant@gmail.com" }
]
keywords = ["python", "java", "marshalling", "serialization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "enum34; python_version<='3.4'",
    "typing; python_version<='3.4'"
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/tcalmant/python-javaobj"
Issues = "http://github.com/tcalmant/python-javaobj/issues"
Source = "http://github.com/tcalmant/python-javaobj/"

[tool.hatch.envs.test]
dependencies = ["pytest"]

[tool.hatch.envs.test.scripts]
run = "pytest tests"

[tool.black]
line-length = 79
